[package]
name = "gpt-pipe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gpt-pipe"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deno_core = "0.186.0"
peekmore = "1.2.1"
once_cell = "1.17.1"
